generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id String @id @default(uuid())

  projects Project[]

  email String @unique
  name String
  surname String
  company String
  logo String
}

model Project {
  id String @id @default(uuid())

  user User @relation(fields: [userId], references: [id])
  userId String

  sessions Session[]

  name String
  hourlyRate Int
  isActive Boolean @default(true)
  customer String?
}

model Session {
  id String @id @default(uuid())

  project Project @relation(fields: [projectId], references: [id])
  projectId String
  photos SessionPhoto[]

  fromDate DateTime
  toDate DateTime
  isInvoiced Boolean @default(false)
  hourlyRate Int?
  note String?
}

model SessionPhoto {
  id String @id @default(uuid())

  session Session @relation(fields: [sessionId], references: [id])
  sessionId String

  source String
  description String?
}